client/scss/imports/_site-header.scss
/* header */

$site-header-height: 4rem;
$site-header-ui-elements-height: 3rem;

.site-header {
  height: $site-header-height;
  background-color: $color-green--hover;
  color: $color-white;
}

.site-header__actions {
  float: right;
}

.container--site-header {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.dat-import {
  display: inline-block;
  height: $site-header-ui-elements-height;
  max-width: 12rem;
  vertical-align: middle;
  margin-left: 2rem;
}

.dat-logo {
  display: flex;
  align-items: center;
  font-size: 1.5rem;
  font-weight: 600;
  color: $color-white;
  letter-spacing: .025em;
  > div {
    display: none;
  }
  @include breakpoint (md1) {
    div {
      display: block;
    }
  }
  img {
    display: block;
    max-width: 2.5rem;
    margin-right: .75rem;
    transition: transform .5s ease-in-out;
  }
  span {
    opacity: .5;
  }
  &:hover, &:focus {
    color: $color-white;
    img {
      transform: rotate(360deg);
    }
  }
}

// dat-button
.dat-button {
  display: inline-block;
  button {
    height: $site-header-ui-elements-height;
    text-transform: uppercase;
    letter-spacing: .075em;
    &:hover, &:focus, &:active {
      outline: none;
      cursor: pointer;
    }
  }
}

.dat-button--new-dat {
  button {
    background-color: transparent;
    &:hover, &:focus, &:active {
      background-color: $color-green--darker;
    }
  }
}

.dat-button--help {
  position: fixed;
  bottom: 2rem;
  right: .5rem;
  button {
    $radius: 24px;
    border-radius: $radius;
    box-shadow:
      0px 2px 10px rgba(0,0,0,.3),
      0px 0px 1px rgba(0,0,0,.1),
      inset 0px 1px 0px rgba(255,255,255,.25),
      inset 0px -1px 0px rgba(0,0,0,.15);
  }
}

